--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
             - selenium
     mysql:
         image: 'mysql/mysql-server:8.0'
+        platform: linux/amd64
         ports:
             - '${FORWARD_DB_PORT:-3306}:3306'
         environment:
@@ -94,6 +95,7 @@ services:
             - sail
     selenium:
         image: selenium/standalone-chrome
+        platform: linux/amd64
         extra_hosts:
             - 'host.docker.internal:host-gateway'
         volumes:
@@ -102,16 +104,17 @@ services:
             - sail
     phpmyadmin:
         image: phpmyadmin/phpmyadmin
+        platform: linux/amd64
         links:
-          - mysql:mysql
+            - mysql:mysql
         ports:
-          - 8080:80
+            - 8080:80
         environment:
-          MYSQL_USERNAME: "${DB_USERNAME}"
-          MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
-          PMA_HOST: mysql
+            MYSQL_USERNAME: "${DB_USERNAME}"
+            MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
+            PMA_HOST: mysql
         networks:
-          - sail
+            - sail
 networks:
     sail:
         driver: bridge
